--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
-    h1 {
-      font-size:65px ;  
-    }
-    #parágrafo {
-    color: orange;
-    }
-    .lista{
+
+      h1 {
+      font-size:65px ;
+      font-family: sans-serif; 
+      }
+     #parágrafo {
+     color: orange;
+     }
+     .lista{
         background-color: coral;
-    }
-    .cor-p-ul {
-        background-color: olive;
-    }
+     }
+     .cor-p-ul {
+         background-color: olive;
+     }
+     .parg {
+         font-weight: 600px;
+         font-size: 48px;
+     }
+     body{
+         font-size: 16px;
+     }
+     .
+     
+       
 
     </style>
 </head>
 <body>
     <h1>Exercícios 3.2</h1>
-    <p id="parágrafo" class="cor-p-ul">Qual a sua cor favorita?</p>
+    <p id="parágrafo" class="cor-p-ul" class="parg">Qual a sua cor favorita?</p>
     <ul class="cor-p-ul" >
        <li>Amarelo</li>
        <li>Vermelho</li>
