--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -1,58 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Document/3.4</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Varela+Round&display=swap"
+        rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">"> -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
     </header>
-    <nav>
+    <!-- <nav class="lateral-left">
         <ul>
             <li>Página Inicial</li>
             <li>Sobre</li>
             <li>Contato</li>
         </ul>
-    </nav>
-    <article>
-        <h2>subtitulo</h2>
-        <section>
-            <img src="">
+    </nav> -->
+    <main>
+        <article>
             <h3>Características Gerais</h3>
-            <p>Stomatopoda <i>(Odontodactylus scyllarus)</i>, chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica.<br>
-                O. scyllarus é uma das largas espécies de lagostas coloridas, chegando a 18 cm. De coloração verde, com pernas laranjas e com a carapaça com estampas tipo leopardo.
-                Odontodactylus scyllarus vive em tocas que constrói nos fundos dos corais, ou através de buracos deixados por outros animais, em rochas e substratos próximos de corais de recifes a cerca de 40 metros de profundidade.
-            </p>
-        </section>
-        <section> 
-            <img>
-            <h3>Visão</h3>
-            <p> Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina.<br>
-                Para começar, as lagostas-boxeadoras contam com olhos incríveis, que possuem três pontos focais cada e são capazes de enxergar do espectro ultravioleta ao infravermelho. Para que você tenha uma ideia, o olho humano contém milhões de células fotorreceptoras, entre elas os cones, que são as que nos permitem ver as cores.<br>
-                Nossos olhos possuem três tipos desses receptores — que respondem à luz azul, verde e vermelha —, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo.<br>
-                Contudo, as lagostas-boxeadoras são um crustáceo tão sensacional que elas não possuem dois, três ou cinco tipos de cones apenas. Elas contam com 16! Assim, o arco-íris que elas enxergam deve ser uma verdadeira explosão termonuclear de cores, luz e beleza. Mas, como a grande maioria das criaturas, esses animais também possuem um lado obscuro. No caso das tamarutacas, esse lado é sanguinário.<br>
-
-            </p>
-        </section>
-        <section>
-            <img>
-            <h3>Soco Esmagador</h3>
-            <p>De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos apresenta sua própria variação comportamental e até mesmo de habitat.<br>
-               As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm². Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.
-            </p>
-        </section>
-        <section>
-            <nav>Referências bibliofráficas</nav>
-        </section>
-        <aside>
-            <nav>Vídeo</nav>
-        </aside>
+            <section>
+                <img src="https://2.bp.blogspot.com/-hacI2IsX1dw/WwWLGSGyhjI/AAAAAAAAP5c/vAfRQ4atOJ8AoAi0JyYfF8RoxxzrgD7QwCLcBGAs/s640/29113352422121-t1200x480.jpg"
+                    alt="imagem do Stomatopoda">
+                <p>Stomatopoda <i>(Odontodactylus scyllarus)</i>, chamados popularmente de tamarutacas ou de
+                    lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa
+                    cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica.<br>
+                    O. scyllarus é uma das largas espécies de lagostas coloridas, chegando a 18 cm. De coloração verde,
+                    com pernas laranjas e com a carapaça com estampas tipo leopardo.
+                    Odontodactylus scyllarus vive em tocas que constrói nos fundos dos corais, ou através de buracos
+                    deixados por outros animais, em rochas e substratos próximos de corais de recifes a cerca de 40
+                    metros de profundidade.
+                </p>
+            </section>
+            <section>
+                <img src="https://3.bp.blogspot.com/-XJeMwhdByyA/WwWPS8Vm4FI/AAAAAAAAP5s/KNnlIewL9d8dXJg3ktf5VgOq0qSjL2XygCLcBGAs/w640-h414/68901331d88663b76a730367d7a6c4b6.jpg"
+                    alt="destaque para os olhos da lagosta boxeadora" width="600px">
+                <h3>Visão</h3>
+                <p> Para começar, as lagostas-boxeadoras contam com olhos incríveis, que possuem três pontos focais cada
+                    e são capazes de enxergar do espectro ultravioleta ao infravermelho. Para que você tenha uma ideia,
+                    o olho humano contém milhões de células fotorreceptoras, entre elas os cones, que são as que nos
+                    permitem ver as cores.
+                    Nossos olhos possuem três tipos desses receptores — que respondem à luz azul, verde e vermelha —,
+                    que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de
+                    cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo.<br>
+                    Contudo, as lagostas-boxeadoras são um crustáceo tão sensacional que elas não possuem dois, três ou
+                    cinco tipos de cones apenas. Elas contam com 16! Assim, o arco-íris que elas enxergam deve ser uma
+                    verdadeira explosão termonuclear de cores, luz e beleza. Mas, como a grande maioria das criaturas,
+                    esses animais também possuem um lado obscuro. No caso das tamarutacas, esse lado é sanguinário.
+                </p>
+            </section>
+            <section>
+                <img src="https://1.bp.blogspot.com/-7O2I_dmBygo/WwWPTo8RggI/AAAAAAAAP54/aItbLxTQtqEOKn8vHDLV8B6HXGeWIwdhwCLcBGAs/w640-h480/89d73c1873a8e1d5256bb0467f493665.jpg"
+                    alt="destaque para as patas da lagosta boxeadora">
+                <h3>Soco esmagador</h3>
+                <p>As lagostas-boxeadoras costumam ser encontradas próximo à costa de mares tropicais e subtropicais e
+                    são predadoras letais que se alimentam de caranguejos, camarões, moluscos e peixes. Na verdade,
+                    apesar de não serem muito grandes — entre 15 e 30 centímetros —, as tamarutacas são um verdadeiro
+                    pesadelo dos oceanos, sendo consideradas como um dos animais mais violentos do planeta.<br>
+                    Elas possuem duas patas superpoderosas na parte dianteira que, quando acionadas, são capazes de
+                    proferir um golpe com a mesma aceleração de um disparo de uma arma do calibre 22 e força de impacto
+                    de 60 kg/cm3! E isso em menos de 1/3.000 de segundo, o que significa que, se um humano pudesse
+                    acelerar os braços com 1/10 desse poder, seria possível lançar uma bola de baseball em órbita ao
+                    redor da Terra.<br>
+                    São capazes de desferir um dos mais rápidos e violentos golpes do reino animal, seu soco fora
+                    registrado com uma velocidade de 80 km/h e aceleração similar a uma arma calibre .22. A força do
+                    impacto do soco é de 60 kg/cm². Essa força esmagadora é a responsável pelo seu título de
+                    "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e
+                    calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.
+                </p>
+            </section>
+        </article>
+    </main>
+    <aside>
+        <img src="https://2.bp.blogspot.com/-vRplcEu969E/WwWPUG8y2rI/AAAAAAAAP6E/L5O8tRcoqqky9D_nkZW7wF7TW_gdXBSIQCLcBGAs/w640-h426/lacraias-do-mar.jpg"
+            width="250px">
+        <nav>Quer saber mais? Assista esse <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE"
+                target="_blank">vídeo</a></nav>
+    </aside>
+    <div class="clear">
         <footer>
-            "Conteúdo compilado por Valéria Menezes, 2022". 
+            <p>Referências bibliofráficas
+                <ul></ul>
+            </p>
+            <p>"Conteúdo compilado por Valéria Menezes, 2022".</p>
         </footer>
-    </article>
-    
+    </div>
 </body>
+
 </html>
