adicionando alterações nos arquivos html e css

--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -1,43 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-
-      h1 {
-      font-size:65px ;
-      font-family: sans-serif; 
-      }
-     #parágrafo {
-     color: orange;
-     }
-     .lista{
-        background-color: coral;
-     }
-     .cor-p-ul {
-         background-color: olive;
-     }
-     .parg {
-         font-weight: 600px;
-         font-size: 48px;
-     }
-     body{
-         font-size: 16px;
-     }
-     .
-     
-       
-
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     <h1>Exercícios 3.2</h1>
-    <p id="parágrafo" class="cor-p-ul" class="parg">Qual a sua cor favorita?</p>
-    <ul class="cor-p-ul" >
-       <li>Amarelo</li>
-       <li>Vermelho</li>
-       <li>Marrom</li>
+    <p class="background-p-ul">Qual é a sua cor favorita?</p>
+    <ul class="background-p-ul">
+      <li id="li1">Amarelo</li>
+      <li id="li2">Vermelho</li>
+      <li id="li3">Marrom</li>
+      <li id="li4">Roxo</li>
+      <li id="li5">Verde</li>
     </ul>
-</body>
+  </body>
 </html>
