alterando exercicios de contador de clicks

--- a/01-fundamentos/bloco-07-introdução-a-javascript-es6-e-testes-unitários/dia-01-javascript-es6-let-const-arrow-functions-templates-literals/index.html
+++ b/01-fundamentos/bloco-07-introdução-a-javascript-es6-e-testes-unitários/dia-01-javascript-es6-let-const-arrow-functions-templates-literals/index.html
@@ -15,7 +15,7 @@
     const contador = document.getElementById('contador');
     let clicks = 0;
 
-    button.addEventListener('click', () => contador.innerHTML = clicks +=1);
+    button.addEventListener('click', () => contador.innerText = clicks +=1);
   </script>
 </body>
 </html>
